[eclipse/xtext#623] Enable to build on JDK 9
Configure profiles for Mac and JDK9+ and configure tycho-surefire-plugin
dependent on activated profiles.

Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>